# mania-rating-gui

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: db.rs  graphx.rs  lib.rs  main.rs  ui.rs
src/db/: misc.rs  ratings.rs
src/graphx/: rating_generation.rs
src/ui/: bs.rs  callbacks.rs
ui/: help_window.slint  main_window.slint  score_tiles.slint
