[package]
name = "mania-rating-gui"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "*"
mania-converter = { git = "https://github.com/Siflorite/mania-converter-rust.git" }
open = "5.3.2"
osu-db = { git = "https://github.com/Siflorite/osu-db.git" }
rayon = "1.10"
slint = { version = "1.12.1", features = ["renderer-skia-opengl"] }
tokio = { version = "1", features = ["full"] }
winres = "0.1.12"
winreg = "0.55"
# For picture generation
handlebars = "6.3"
resvg = "0.45"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
base64 = "0.22.1"

[build-dependencies]
slint-build = "1.12.1"
winres = "0.1.12"